--- a/ClientApplication/index.css
+++ b/ClientApplication/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 html,
 body {
 	padding: 0;
@@ -5,7 +7,8 @@ body {
 }
 
 body {
-	font-family: -apple-system, 'Helvetica Neue', Helvetica, sans-serif;
+	/*font-family: -apple-system, 'Helvetica Neue', Helvetica, sans-serif;*/
+	font-family: 'Roboto', sans-serif;
 }
 
 header {
