--- a/ClientApplication/index.css
+++ b/ClientApplication/index.css
@@ -29,20 +29,15 @@ header h1 {
 	padding: 0;
 }
 
-main {
-	font-size: 18px;
-	font-weight: 100;
-	margin: 0;
-	padding: 0;
+#message-box {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 6vh;
+
 }
 
-main h2 {
-	position: absolute;
-	width: 500px;
-	height: 250px;
-	top: 50%;
-	left: 50%;
-	margin-top: -125px;
-	margin-left: -250px;
-	text-align: center;
+#main-window{
+	position: relative;
+	height: 94vh;
 }
